--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 	<h1>Projeto Blog</h1>
 	<h2>Seja bem vindo, aqui vc ficar por dentro de tudo!</h2>
+	<input type="button" name="So bora">
 
 </body>
 </html>
