--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<h1>Projeto Blog</h1>
 	<h2>Seja bem vindo, aqui vc ficar por dentro de tudo!</h2>
-	<input type="button" name="So bora">
+	<h3>Vcs tambem nos conheceram mais intimamanete</h3>
 
 </body>
 </html>
