--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 
 	<h1>Projeto Blog</h1>
 	<h2>Seja bem vindo, aqui vc ficar por dentro de tudo!</h2>
-	<h3>Vcs tambem nos conheceram mais intimamanete</h3>
-
+	<input align="center" type="button" name="bora la" value="Bora Lá">
 </body>
 </html>
