--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	<input align="center" type="button" name="bora la" value="Bora Lá">
 	<h3>Sou Gessica Carvalho e tambem sou linda, bjs de luz, devolve e fica no escuro kkkk</h3>
 	<h3>Eu sou a Awilla e é isso kkkk</h3>
-	<h1>Rodrigo lindissimo kkk bjs o auge!!</h1>
+	<h3>Rodrigo lindissimo</h3>
 	<h2>Eu sou a Ronalda e sou muito gata!</h2>
+	
 </body>
 </html>
